adding legacy code

--- a/finetune/data_loading_prototyping.ipynb
+++ b/finetune/data_loading_prototyping.ipynb
@@ -2,17 +2,270 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "from datasets import load_dataset\n",
     "\n",
-    "def main():\n",
-    "    # Load the dataset\n",
-    "    dataset = load_dataset('json', data_files='/u/choprahetarth/all_files/data/train_ftdata-new-small.json')\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "dataset = load_dataset('json', data_files='/u/choprahetarth/all_files/data/train_ftdata-new-small.json')\n",
+    "# Convert to pandas dataframe and print some rows\n",
+    "df = pd.DataFrame(dataset['train'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>input</th>\n",
+       "      <th>download_count</th>\n",
+       "      <th>path</th>\n",
+       "      <th>repo_name</th>\n",
+       "      <th>download_link</th>\n",
+       "      <th>output</th>\n",
+       "      <th>org_name</th>\n",
+       "      <th>license</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>name: Generate systemd service</td>\n",
+       "      <td>1441</td>\n",
+       "      <td>data/repos/jkrue/theia_ide/tasks/main.yml</td>\n",
+       "      <td>theia_ide</td>\n",
+       "      <td>https://old-galaxy.ansible.com/jkrue/theia_ide</td>\n",
+       "      <td>template:\\n  src: theia-ide.service.j2\\n  dest...</td>\n",
+       "      <td>jkrue</td>\n",
+       "      <td>BSD-3-Clause</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>name: Test Changes</td>\n",
+       "      <td>1928</td>\n",
+       "      <td>data/repos/imcitius/ansible_transparent_huge_p...</td>\n",
+       "      <td>ansible_transparent_huge_pages</td>\n",
+       "      <td>https://old-galaxy.ansible.com/imcitius/ansibl...</td>\n",
+       "      <td>command: cat /sys/kernel/mm/transparent_hugepa...</td>\n",
+       "      <td>imcitius</td>\n",
+       "      <td>Apache-2.0-Short,Apache-2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>name: Ensure Image Builder packages are instal...</td>\n",
+       "      <td>2872</td>\n",
+       "      <td>data/repos/linux-system-roles/image_builder/ta...</td>\n",
+       "      <td>image_builder</td>\n",
+       "      <td>https://old-galaxy.ansible.com/linux-system-ro...</td>\n",
+       "      <td>package:\\n  name: ''\\n  state: present\\n</td>\n",
+       "      <td>linux-system-roles</td>\n",
+       "      <td>GPL-3.0-only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>name: Create the nginxlog_exporter group</td>\n",
+       "      <td>14120</td>\n",
+       "      <td>data/repos/mbaran0v/ansible_role_prometheus_ng...</td>\n",
+       "      <td>ansible_role_prometheus_nginxlog_exporter</td>\n",
+       "      <td>https://old-galaxy.ansible.com/mbaran0v/ansibl...</td>\n",
+       "      <td>group:\\n  name: '{{ nginxlog_exporter_user }}'...</td>\n",
+       "      <td>mbaran0v</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>name: Enable apache2 proxy modules</td>\n",
+       "      <td>613</td>\n",
+       "      <td>data/repos/hadrienpatte/subsonic/tasks/HTTP_se...</td>\n",
+       "      <td>subsonic</td>\n",
+       "      <td>https://old-galaxy.ansible.com/hadrienpatte/su...</td>\n",
+       "      <td>apache2_module:\\n  name: ''\\n  state: present\\...</td>\n",
+       "      <td>hadrienpatte</td>\n",
+       "      <td>MIT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15241</th>\n",
+       "      <td>name: create vertica dir</td>\n",
+       "      <td>621</td>\n",
+       "      <td>data/repos/hpcloud-mon/monasca-persister/tasks...</td>\n",
+       "      <td>monasca-persister</td>\n",
+       "      <td>https://old-galaxy.ansible.com/hpcloud-mon/mon...</td>\n",
+       "      <td>file: path=/opt/monasca/vertica state=director...</td>\n",
+       "      <td>hpcloud-mon</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15242</th>\n",
+       "      <td>name: Assert that GPG verification was successful</td>\n",
+       "      <td>19333</td>\n",
+       "      <td>data/repos/ecgalaxy/aws_cli/tasks/main.yml</td>\n",
+       "      <td>aws_cli</td>\n",
+       "      <td>https://old-galaxy.ansible.com/ecgalaxy/aws_cli</td>\n",
+       "      <td>ansible.builtin.assert:\\n  that:\\n  - verifica...</td>\n",
+       "      <td>ecgalaxy</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15243</th>\n",
+       "      <td>name: Install required packages</td>\n",
+       "      <td>1212</td>\n",
+       "      <td>data/repos/ccdc/cpp_required_tools/tasks/RedHa...</td>\n",
+       "      <td>cpp_required_tools</td>\n",
+       "      <td>https://old-galaxy.ansible.com/ccdc/cpp_requir...</td>\n",
+       "      <td>ansible.builtin.dnf:\\n  name:\\n  - zstd\\n  - p...</td>\n",
+       "      <td>ccdc</td>\n",
+       "      <td>MIT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15244</th>\n",
+       "      <td>name: Include OS-specific variables (Debian)</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>data/repos/ecgalaxy/oracle_instantclient/tasks...</td>\n",
+       "      <td>oracle_instantclient</td>\n",
+       "      <td>https://old-galaxy.ansible.com/ecgalaxy/oracle...</td>\n",
+       "      <td>ansible.builtin.include_vars: Debian.yml\\nwhen...</td>\n",
+       "      <td>ecgalaxy</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15245</th>\n",
+       "      <td>name: Ensure user can deploy manpages</td>\n",
+       "      <td>1212</td>\n",
+       "      <td>data/repos/ccdc/cpp_required_tools/tasks/Darwi...</td>\n",
+       "      <td>cpp_required_tools</td>\n",
+       "      <td>https://old-galaxy.ansible.com/ccdc/cpp_requir...</td>\n",
+       "      <td>ansible.builtin.file:\\n  path: /usr/local/shar...</td>\n",
+       "      <td>ccdc</td>\n",
+       "      <td>MIT</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15246 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   input download_count  \\\n",
+       "0                         name: Generate systemd service           1441   \n",
+       "1                                     name: Test Changes           1928   \n",
+       "2      name: Ensure Image Builder packages are instal...           2872   \n",
+       "3               name: Create the nginxlog_exporter group          14120   \n",
+       "4                     name: Enable apache2 proxy modules            613   \n",
+       "...                                                  ...            ...   \n",
+       "15241                           name: create vertica dir            621   \n",
+       "15242  name: Assert that GPG verification was successful          19333   \n",
+       "15243                    name: Install required packages           1212   \n",
+       "15244       name: Include OS-specific variables (Debian)           1950   \n",
+       "15245              name: Ensure user can deploy manpages           1212   \n",
+       "\n",
+       "                                                    path  \\\n",
+       "0              data/repos/jkrue/theia_ide/tasks/main.yml   \n",
+       "1      data/repos/imcitius/ansible_transparent_huge_p...   \n",
+       "2      data/repos/linux-system-roles/image_builder/ta...   \n",
+       "3      data/repos/mbaran0v/ansible_role_prometheus_ng...   \n",
+       "4      data/repos/hadrienpatte/subsonic/tasks/HTTP_se...   \n",
+       "...                                                  ...   \n",
+       "15241  data/repos/hpcloud-mon/monasca-persister/tasks...   \n",
+       "15242         data/repos/ecgalaxy/aws_cli/tasks/main.yml   \n",
+       "15243  data/repos/ccdc/cpp_required_tools/tasks/RedHa...   \n",
+       "15244  data/repos/ecgalaxy/oracle_instantclient/tasks...   \n",
+       "15245  data/repos/ccdc/cpp_required_tools/tasks/Darwi...   \n",
+       "\n",
+       "                                       repo_name  \\\n",
+       "0                                      theia_ide   \n",
+       "1                 ansible_transparent_huge_pages   \n",
+       "2                                  image_builder   \n",
+       "3      ansible_role_prometheus_nginxlog_exporter   \n",
+       "4                                       subsonic   \n",
+       "...                                          ...   \n",
+       "15241                          monasca-persister   \n",
+       "15242                                    aws_cli   \n",
+       "15243                         cpp_required_tools   \n",
+       "15244                       oracle_instantclient   \n",
+       "15245                         cpp_required_tools   \n",
+       "\n",
+       "                                           download_link  \\\n",
+       "0         https://old-galaxy.ansible.com/jkrue/theia_ide   \n",
+       "1      https://old-galaxy.ansible.com/imcitius/ansibl...   \n",
+       "2      https://old-galaxy.ansible.com/linux-system-ro...   \n",
+       "3      https://old-galaxy.ansible.com/mbaran0v/ansibl...   \n",
+       "4      https://old-galaxy.ansible.com/hadrienpatte/su...   \n",
+       "...                                                  ...   \n",
+       "15241  https://old-galaxy.ansible.com/hpcloud-mon/mon...   \n",
+       "15242    https://old-galaxy.ansible.com/ecgalaxy/aws_cli   \n",
+       "15243  https://old-galaxy.ansible.com/ccdc/cpp_requir...   \n",
+       "15244  https://old-galaxy.ansible.com/ecgalaxy/oracle...   \n",
+       "15245  https://old-galaxy.ansible.com/ccdc/cpp_requir...   \n",
+       "\n",
+       "                                                  output            org_name  \\\n",
+       "0      template:\\n  src: theia-ide.service.j2\\n  dest...               jkrue   \n",
+       "1      command: cat /sys/kernel/mm/transparent_hugepa...            imcitius   \n",
+       "2               package:\\n  name: ''\\n  state: present\\n  linux-system-roles   \n",
+       "3      group:\\n  name: '{{ nginxlog_exporter_user }}'...            mbaran0v   \n",
+       "4      apache2_module:\\n  name: ''\\n  state: present\\...        hadrienpatte   \n",
+       "...                                                  ...                 ...   \n",
+       "15241  file: path=/opt/monasca/vertica state=director...         hpcloud-mon   \n",
+       "15242  ansible.builtin.assert:\\n  that:\\n  - verifica...            ecgalaxy   \n",
+       "15243  ansible.builtin.dnf:\\n  name:\\n  - zstd\\n  - p...                ccdc   \n",
+       "15244  ansible.builtin.include_vars: Debian.yml\\nwhen...            ecgalaxy   \n",
+       "15245  ansible.builtin.file:\\n  path: /usr/local/shar...                ccdc   \n",
+       "\n",
+       "                           license  \n",
+       "0                     BSD-3-Clause  \n",
+       "1      Apache-2.0-Short,Apache-2.0  \n",
+       "2                     GPL-3.0-only  \n",
+       "3                                   \n",
+       "4                              MIT  \n",
+       "...                            ...  \n",
+       "15241                               \n",
+       "15242                               \n",
+       "15243                          MIT  \n",
+       "15244                               \n",
+       "15245                          MIT  \n",
+       "\n",
+       "[15246 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
